--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div class="social_icons">
                         <a href="https://www.facebook.com/avetis.harutyunyan.58" target="_blank"> <i class="fa-brands fa-facebook-f"></i> </a>
                         <a href="https://www.instagram.com/avharutyunyann/" target="_blank"> <i class="fa-brands fa-instagram"></i> </a>
+                        <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank"> <i class="fa-brands fa-linkedin-in"></i> </a>
                         <a href="https://t.me/HarutyunyanAvetis" target="_blank"> <i class="fa-light fa-paper-plane"></i> </a>
                         <a href="https://github.com/AvetisHarutyunyan" target="_blank"> <i class="fa-brands fa-github"></i> </a>
                     </div>
