--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 <p class="profession">Layout Designer</p>
 
                 <p class="about__text">
-                    My name is Avetis. I'm from Armenia, I only create landing pages.
-                    If you have any questions, you can contact me.
+                    I live in Armenia. I create exclusively landing pages.
+                    If you need a program that will work for you without a flaw,
+                    then I'm waiting for you. You can contact me at any time.
                 </p>
 
                 <p class="mail"><i class="fa-solid fa-envelope mail_icon"></i> avetis.harutyunyan.98@gmail.com</p>
