--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avetis Harutyunyan - Card</title>
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link rel="icon" href="/images/head__icon.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="./images/head_img.png">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 
     <div class="container">
-        <div class="card__box_items">
+        <div class="card__box_items" title="Avetis Harutyunyan - Card">
             <div class="image__item">
                 <img src="/images/user__img.png" alt="image">
             </div>
@@ -31,11 +31,11 @@
 
                 <div class="social__pages">
                     <div class="social_icons">
-                        <a href="https://www.facebook.com/avetis.harutyunyan.58" target="_blank"> <i class="fa-brands fa-facebook-f"></i> </a>
-                        <a href="https://www.instagram.com/avharutyunyann/" target="_blank"> <i class="fa-brands fa-instagram"></i> </a>
-                        <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank"> <i class="fa-brands fa-linkedin-in"></i> </a>
-                        <a href="https://t.me/HarutyunyanAvetis" target="_blank"> <i class="fa-light fa-paper-plane"></i> </a>
-                        <a href="https://github.com/AvetisHarutyunyan" target="_blank"> <i class="fa-brands fa-github"></i> </a>
+                        <a href="https://www.facebook.com/avetis.harutyunyan.58" target="_blank" title="Facebook"> <i class="fa-brands fa-facebook-f"></i> </a>
+                        <a href="https://www.instagram.com/avharutyunyann/" target="_blank" title="Instagram"> <i class="fa-brands fa-instagram"></i> </a>
+                        <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank" title="Linkedin"> <i class="fa-brands fa-linkedin-in"></i> </a>
+                        <a href="https://t.me/HarutyunyanAvetis" target="_blank" title="Telegram"> <i class="fa-light fa-paper-plane"></i> </a>
+                        <a href="https://github.com/AvetisHarutyunyan" target="_blank" title="GitHub"> <i class="fa-brands fa-github"></i> </a>
                     </div>
                 </div>
             </div>
