--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="image__item">
                 <img src="/images/user__img.png" alt="image">
             </div>
-            
+
             <div class="info__item">
                 <h1 class="name">Avetis Harutyunyan</h1>
                 <p class="profession">Layout Designer</p>
@@ -31,11 +31,12 @@
 
                 <div class="social__pages">
                     <div class="social_icons">
-                        <a href="https://www.facebook.com/avetis.harutyunyan.58" target="_blank" title="Facebook"> <i class="fa-brands fa-facebook-f"></i> </a>
+                        <a href="https://www.facebook.com/avetis.harutyunyan.58/" target="_blank" title="Facebook"> <i class="fa-brands fa-facebook-f"></i> </a>
                         <a href="https://www.instagram.com/avharutyunyann/" target="_blank" title="Instagram"> <i class="fa-brands fa-instagram"></i> </a>
                         <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank" title="Linkedin"> <i class="fa-brands fa-linkedin-in"></i> </a>
-                        <a href="https://t.me/HarutyunyanAvetis" target="_blank" title="Telegram"> <i class="fa-light fa-paper-plane"></i> </a>
-                        <a href="https://github.com/AvetisHarutyunyan" target="_blank" title="GitHub"> <i class="fa-brands fa-github"></i> </a>
+                        <a href="https://t.me/HarutyunyanAvetis/" target="_blank" title="Telegram"> <i class="fa-light fa-paper-plane"></i> </a>
+                        <a href="https://github.com/AvetisHarutyunyan/" target="_blank" title="GitHub"> <i class="fa-brands fa-github"></i> </a>
+                        <a href="https://avetisharutyunyan.github.io/avinfo/" target="_blank" title="AvInfo"> <img src="./images/card_social_icon.svg" alt="AvInfo"> </a>
                     </div>
                 </div>
             </div>
