--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
         <div class="card__box_items" title="Avetis Harutyunyan - Card">
             <div class="image__item">
-                <img src="/images/user__img.png" alt="image">
+                <img src="/images/user__img.jpg" alt="image">
             </div>
 
             <div class="info__item">
                 <h1 class="name">Avetis Harutyunyan</h1>
-                <p class="profession">Layout Designer</p>
+                <p class="profession">Front-End Developer</p>
 
                 <p class="about__text">
                     I live in Armenia. I create exclusively landing pages.
