--- a/index.html
+++ b/index.html
@@ -5,52 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avetis Harutyunyan - Card</title>
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap">
-    <link rel="icon" href="./images/head_img.png">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" href="./images/head-Icon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
 
-    <div class="container">
-        <div class="card__box_items" title="Avetis Harutyunyan - Card">
-            <div class="image__item">
-                <img class="userImage" src="/images/user__img.jpg" alt="image" title="Enlarge image">
+    <div class="card">
+        <div class="myImg">
+            <img src="./images/myImage.jpg" alt="image">
+        </div>
+
+        <h1 class="name">Avetis Harutyunyan</h1>
+        <p class="prof">Front-End Developer</p>
+
+        <p class="myInfo_text">
+            I live in Armenia. I create exclusively landing pages.
+            If you need a program that will work for you without a flaw,
+            then I'm waiting for you. You can contact me at any time.
+        </p>
+
+        <div class="myMail">
+            <div class="mail_icon">
+                <img src="./images/email.svg" alt="mail">
             </div>
+            <p class="mail">avetis.harutyunyan.98@gmail.com</p>
+        </div>
 
-            <div class="info__item">
-                <h1 class="name">Avetis Harutyunyan</h1>
-                <p class="profession">Front-End Developer</p>
-
-                <p class="about__text">
-                    I live in Armenia. I create exclusively landing pages.
-                    If you need a program that will work for you without a flaw,
-                    then I'm waiting for you. You can contact me at any time.
-                </p>
-
-                <p class="mail"><i class="fa-solid fa-envelope mail_icon"></i> avetis.harutyunyan.98@gmail.com</p>
-
-                <div class="social__pages">
-                    <div class="social_icons">
-                        <a href="https://www.facebook.com/avetis.harutyunyan.58/" target="_blank" title="Facebook"> <i
-                                class="fa-brands fa-facebook-f"></i> </a>
-                        <a href="https://www.instagram.com/avharutyunyann/" target="_blank" title="Instagram"> <i
-                                class="fa-brands fa-instagram"></i> </a>
-                        <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank" title="Linkedin"> <i
-                                class="fa-brands fa-linkedin-in"></i> </a>
-                        <a href="https://t.me/HarutyunyanAvetis/" target="_blank" title="Telegram"> <i
-                                class="fa-light fa-paper-plane"></i> </a>
-                        <a href="https://github.com/AvetisHarutyunyan/" target="_blank" title="GitHub"> <i
-                                class="fa-brands fa-github"></i> </a>
-                        <a href="https://avetisharutyunyan.github.io/avinfo/" target="_blank" title="AvInfo"> <img
-                                src="./images/card_social_icon.svg" alt="AvInfo"> </a>
-                    </div>
-                </div>
+        <div class="social__pages">
+            <div class="social_icons">
+                <a href="https://avetisharutyunyan.github.io/avinfo/" target="_blank" title="AvInfo">
+                    <img src="./images/avinfo_icon7.svg" alt="AvInfo">
+                </a>
+                <a href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank" title="Facebook">
+                    <img src="./images/linkedin_icon2.svg" alt="Facebook">
+                </a>
+                <a href="https://www.github.com/avetisharutyunyan/" target="_blank" title="Instagram">
+                    <img src="./images/github_icon3.svg" alt="Instagram">
+                </a>
+                <a href="https://t.me/HarutyunyanAvetis/" target="_blank" title="Linkedin">
+                    <img src="./images/telegram_icon4.svg" alt="Linkedin">
+                </a>
+                <a href="https://www.instagram.com/avharutyunyann/" target="_blank" title="Telegram">
+                    <img src="./images/instagram_icon5.svg" alt="Telegram">
+                </a>
+                <a href="https://facebook.com/avetis.harutyunyan.58/" target="_blank" title="GitHub">
+                    <img src="./images/facebook_icon6.svg" alt="GitHub">
+                </a>
             </div>
         </div>
     </div>
-
-    <script src="/js/all.js"></script>
 
 </body>
 </html>
