--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             then I'm waiting for you. You can contact me at any time.
         </p>
 
-        <div class="myMail">`
+        <div class="myMail">
             <div class="mail_icon">
                 <img src="./images/email.svg" alt="mail">
             </div>
