Junior Front-End Developer 11.07.2023

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avetis Harutyunyan - Card</title>
-    <link rel="shortcut icon" href="./images/head-Icon.svg" type="image/x-icon">
+    <link rel="icon" href="./images/head-Icon.svg" type="image/svg">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
@@ -16,12 +16,12 @@
         </div>
 
         <h1 class="name">Avetis Harutyunyan</h1>
-        <p class="prof">Front-End Developer</p>
+        <p class="prof">Junior Front-End Developer</p>
 
         <p class="myInfo_text">
-            I live in Armenia. I create exclusively landing pages.
-            If you need a program that will work for you without a flaw,
-            then I'm waiting for you. You can contact me at any time.
+            I am Avetis. I live in Armenia. I develop the front end of websites.
+            I build websites fully responsive. You can contact me at any time
+            and I will answer you.
         </p>
 
         <div class="myMail">
