added telephone number function

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="phone_icon mail_icon">
                     <img src="./images/phone.svg" alt="phone">
                 </div>
-                <p class="phone mail">(+374) 77 94-75-45</p>
+                <a class="phone mail" href="tel:+37477947545">(+374) 77 94-75-45</a>
             </div>
 
         </div>
